--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
           coreApp="true">
 
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"/>
-    <uses-permission android:name="cyanogenmod.permission.LIVE_LOCK_SCREEN_MANAGER_PROVIDER"/>
+    <uses-permission android:name="mokee.permission.LIVE_LOCK_SCREEN_MANAGER_PROVIDER"/>
 
     <application android:label="@string/app_name">
 
@@ -27,7 +27,7 @@
                  android:enabled="true"
                  android:exported="true">
             <intent-filter>
-                <action android:name="cyanogenmod.app.LiveLockScreenManagerService"/>
+                <action android:name="mokee.app.LiveLockScreenManagerService"/>
             </intent-filter>
         </service>
 
