--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
           package="org.cyanogenmod.livelockscreen.service"
           coreApp="true">
 
-    <uses-permission android:name="cyanogenmod.permission.LIVE_LOCK_SCREEN_MANAGER_PROVIDER"/>
+    <uses-permission android:name="mokee.permission.LIVE_LOCK_SCREEN_MANAGER_PROVIDER"/>
 
     <application android:label="@string/app_name"
                  android:icon="@mipmap/ic_live_lock_screen_service">
@@ -27,7 +27,7 @@
                  android:enabled="true"
                  android:exported="true">
             <intent-filter>
-                <action android:name="cyanogenmod.app.LiveLockScreenManagerService"/>
+                <action android:name="mokee.app.LiveLockScreenManagerService"/>
             </intent-filter>
         </service>
 
